# diploma

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
output/baseline/std/3735928559/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/baseline/std/5553535/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/baseline/std/7/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/baseline/std/700602/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/baseline/std/8639723/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/inline/std/3735928559/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/inline/std/5553535/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/inline/std/7/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/inline/std/700602/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/inline/std/8639723/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy/std/3735928559/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy/std/5553535/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy/std/7/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy/std/700602/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy/std/8639723/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy_naive/std/3735928559/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy_naive/std/5553535/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy_naive/std/7/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy_naive/std/700602/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
output/proxy_naive/std/8639723/: 1024.txt  1048576.txt  131072.txt  16384.txt  16777216.txt  2048.txt  2097152.txt  262144.txt  32768.txt  4096.txt  4194304.txt  524288.txt  65536.txt  8192.txt  8388608.txt
prelude/: Common.hpp  DataStream.hpp  Maybe.hpp  Scalar.hpp
prelude/baseline/: Allocator.hpp  Array.hpp  ArrayBase.hpp  Includes.hpp  InputStream.hpp  OutputStream.hpp
prelude/opus/: Allocator.hpp  Array.hpp  ArrayBase.hpp  Includes.hpp  InputStream.hpp  OutputStream.hpp  Proxy.hpp
samples/: BaselineIncludes.hpp  InlineIncludes.hpp  ProxyIncludes.hpp  ProxyNaiveIncludes.hpp
samples/baseline/simple/: CompoundCTS.hpp  CompoundRTS.hpp  IntDouble.hpp  IntDoubleLong.hpp  Picture.hpp  Point.hpp  Rectangle.hpp  StringIntLong.hpp
samples/baseline/statshouse/: Dictionary.hpp  DictionaryField.hpp  HighLevelType.hpp  QueryResponse.hpp  True.hpp
samples/baseline/statshouse/api/: Filter.hpp  Flag.hpp  Function.hpp  GetChunkResponse.hpp  GetQueryPointResponse.hpp  GetQueryResponse.hpp  PointMeta.hpp  Query.hpp  QueryPoint.hpp  ReleaseChunkResponse.hpp  Series.hpp  SeriesMeta.hpp  TagValue.hpp
samples/baseline/statshouse/engine/: HttpQuery.hpp  HttpQueryResponse.hpp
test/: Environment.hpp  Utils.hpp
test/bench/: CMakeLists.txt  stream_block_size.cfg
test/bench/input/: main.cpp
test/bench/output/: AddMetricsBatchQuery.hpp  GetChunkResponse.hpp  GetQueryPointResponse.hpp  GetQueryResponse.hpp  HttpQuery.hpp  HttpQueryResponse.hpp  Query.hpp  QueryPoint.hpp  ReleaseChunkResponse.hpp  SourceBucket2.hpp  main.cpp
test/fuzz/: ArrayPrimitive.hpp  FuzzBlockStream.hpp  String.hpp
test/fuzz/simple/: CompoundCTS.hpp  CompoundRTS.hpp  IntDouble.hpp  IntDoubleLong.hpp  Picture.hpp  Point.hpp  Rectangle.hpp  StringIntLong.hpp  test.cpp
test/fuzz/statshouse/: Dictionary.hpp  DictionaryField.hpp  test.cpp
test/unit/: ArrayPrimitive.hpp  CompoundCTS.hpp  CompoundRTS.hpp  IntDouble.hpp  IntDoubleLong.hpp  Picture.hpp  Point.hpp  Rectangle.hpp  String.hpp  StringIntLong.hpp  test.cpp
utils/: crc.hpp
(+818 files in other folders)
